# duckietown

./: README.md  duckietown_key1  heatmapdata.csv  odometry.csv  scuderia.yaml
catkin_ws/src/: README.md
catkin_ws/src/duckietown_msgs/: CMakeLists.txt
catkin_ws/src/duckietown_msgs/msg/: Tau.msg  TauOld.msg
catkin_ws/src/fall2016_rpi/: README
catkin_ws/src/fall2016_rpi/bb8/: README  artag_test.m  duckexample.m  duckkeydrive.m  ducksetup.m  pathdef.m
catkin_ws/src/fall2016_rpi/bb8/localization/: localization.m  robot.m  sensor.m
catkin_ws/src/fall2016_rpi/bb8/particalfilter/ParticleFilter/: ParticleFilter.asv  ParticleFilter.m
catkin_ws/src/fall2016_rpi/duckedout/: README
catkin_ws/src/fall2016_rpi/duckedout/platooning/launch/: move2.launch  platooning.launch  position_controller.launch
catkin_ws/src/fall2016_rpi/ducksinarow/: CMakeLists.txt  package.xml
catkin_ws/src/fall2016_rpi/ducksinarow/src/: ducksinarow_node.cpp  kintest.cpp
catkin_ws/src/fall2016_rpi/dumpduck/: README
catkin_ws/src/fall2016_rpi/faduck/: README
catkin_ws/src/fall2016_rpi/mkduckie/: README
catkin_ws/src/lane_filter/src/: lane_filter_node.py.save
catkin_ws/src/tau/: CMakeLists.txt  package.xml
catkin_ws/src/tau/src/: tau_node.py  tau_node_old.py
catkin_ws/src/wifianalyzer_teamgrapes/include/wifianalyzer_teamgrapes/: util.py  wifiutils.py
catkin_ws/src/wifianalyzer_teamgrapes/src/: heatmap_data_node.py  heatmap_odometry_node.py  heatmapdata.csv  image_saver_node.py  lane_pose_estimator_node.py  publisher_node.py
(+16 files in other folders)
